--- a/app/views/admin/careers/edit.html.erb
+++ b/app/views/admin/careers/edit.html.erb
@@ -1,4 +1,8 @@
-<h1>Careers#edit</h1>
 <h1> Editar Carrera </h1>
 
+<br>
+
 <%= render "form" %>
+
+<%= link_to 'Mostrar Carrera', (['admin', @carrera]) %> |
+<%= link_to 'Volver al Formulario', admin_careers_path %>
