--- a/app/views/admin/careers/new.html.erb
+++ b/app/views/admin/careers/new.html.erb
@@ -1,5 +1,7 @@
-<h1>Careers#new</h1>
+<h1>Nueva Carrera</h1>
 
-<%= link_to "Index", admin_careers_path %>
+<br>
 
 <%= render "form" %>
+
+<%= link_to 'Volver al Formulario', admin_careers_path %>
