--- a/app/views/layouts/partials/_banner.html.erb
+++ b/app/views/layouts/partials/_banner.html.erb
@@ -1,26 +1,17 @@
-
-		<div class="row">
-			<div class="col-md-10">
-				<div class="banner"></div>
-			</div>
-
-			<div class="col-md-2">
-				<div class="sesion"></div>
-			</div>
-	</div>
-
-
-
+<div class ="container">
 	<div class="row">
 
-		<div class="col-md-9">
-			<div class="statusmenu"></div>
+		<div class="col-md-2">
+			<div class="pull-right"><%= link_to image_tag("UAA.jpg", alt: "logo") %></div>
 		</div>
 
-		<div class="col-md-3">
-			<div class="status"></div>
+		<div class="col-md-8">
+			<div class="banner">SSE</div> 
 		</div>
 
-	</div>
-
+		<div class="col-md-2">
+			<div class= "pull-left"><%= link_to image_tag("sisomosunam.jpg", alt: "logo") %></div>
+		</div>
+    </div>
+</div>
 
