--- a/app/views/layouts/partials/_footer.html.erb
+++ b/app/views/layouts/partials/_footer.html.erb
@@ -1,10 +1,7 @@
 <div class="footer">
-
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-md-12">Pie de Pagina</div>
+			<div class="col-md-12">Sistema de Seguimiento de Egresados de la Universidad Americana de Acapulco, MegasCorp todos los derechos e izquierdos bien puestos.</div>
 		</div>
 	</div>
-
-
 </div>
