--- a/app/views/admin/careers/_form.html.erb
+++ b/app/views/admin/careers/_form.html.erb
@@ -1,7 +1,24 @@
-<%= form_for(['admin', @carrera]) do |f| %> 
-	<%= f.label :descripcion %>       
-	<%= f.text_field :descripcion %>  
-	<br>
-	<%= f.submit %>
+<div class="col-sm-3"></div>
+
+<div class="col-sm-6">
+
+<%= render "utilidades/errores", current_model: @carrera %>
+
+<%= form_for(['admin', @carrera], html: {class: 'form-horizontal'}) do |f| %> 
+
+	<div class="form-group">
+		<%= f.label :descripcion, class: 'col-sm-2 control-label' %>  
+		 <div class="col-sm-10" >     
+		<%= f.text_field :descripcion, class: 'form-control'  %>  
+	</div>
+	</div>
+
+<br>
+
+	<div class="actions">
+	   <%= f.submit "Aceptar", :class => 'btn btn-mini btn-info' %>
+	</div>
 
 <% end %>
+
+<div class="col-sm-3"></div>
