--- a/app/views/admin/careers/index.html.erb
+++ b/app/views/admin/careers/index.html.erb
@@ -1,23 +1,15 @@
-<h1>Careers#index   <%= current_user.email if user_signed_in? %> </h1>
+<p id="notice"><%= notice %></p>
 
-<%= link_to "Nueva Carrera", new_admin_career_path %>
+<h1>Formulario Carreras</h1>
 
-<% if user_signed_in? %>
-  <li><%= link_to "[ Cerrar Sesión ]", destroy_user_session_path, method: :delete %></li>
-<% else %>
-  <li><%= link_to "[ Iniciar Sesión ]", new_user_session_path %></li>
-<% end %>
-
-<!---<%= link_to "[ Cerrar Sesión ]", destroy_user_session_path, method: :delete %> -->
-
+<%= link_to "Nueva Carrera", new_admin_career_path, :class => 'btn btn-mini btn-success' %>
 
 <% if @carreras.blank? %>
 	<p style="color:red">No hay elementos en la base de datos </p>
 <% else %>
-	<p style="color:blue">Hay elementos</p>
+	<p style="color:blue">Hay elementos en la base de datos</p>
 
-
-					<table class="table table-striped table-hover">
+					<table class="careerstable table table-hover table-striped">
 						<thead>
 							<tr>
 						        <th>ID</th>
@@ -30,9 +22,9 @@
 						<tr>
 					        <td><%= e.id %></td>
 							<td><%= e.descripcion %></td>
-							<td><%= link_to "[Mostrar]", admin_career_path(e) %>
-							<%= link_to "[Editar]", edit_admin_career_path(e) %>
-							<%= link_to "[Eliminar]", admin_career_path(e), method: :delete, data: { confirm: '¿Eliminar Elemento?' } %></td>
+							<td><%= link_to "Mostrar", admin_career_path(e), :class => 'btn btn-mini btn-info' %>
+							<%= link_to "Editar", edit_admin_career_path(e), :class => 'btn btn-mini btn-primary' %>
+							<%= link_to "Eliminar", admin_career_path(e), :class => 'btn btn-mini btn-danger', method: :delete, data: { confirm: '¿Eliminar Elemento?' } %></td>
 
 							<!-- para ver el path de editar, mostrar o eliminar, hacer rake routes en la consola -->
 						</tr>
