--- a/app/views/layouts/admininterface.html.erb
+++ b/app/views/layouts/admininterface.html.erb
@@ -8,9 +8,11 @@
     <%= javascript_include_tag 'default', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body class="admininterface">
   
-
+  <%= render 'layouts/partials/banner' %>
+  <br>
+  <%= render 'layouts/admin/navbar' %>
   
     <%= yield %>
   </body>
